kubernetes/consul/templates/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: consul
---
apiVersion: v1
kind: Namespace
metadata:
  name: togethergo
